--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,8 @@ jobs:
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Run the script inside assignment 10
+        env:
+          gcloud_token: ${{ secrets.GCLOUD }}
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          chmod +x assignment10/run.sh  $gcloud_token
