--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,11 @@ jobs:
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
+      - name: Permissions
+        run:
+          chmod +x assignment10/run.sh
       - name: Run the script inside assignment 10
         env:
           gcloud_token: ${{ secrets.GCLOUD }}
         run: |
-          chmod +x assignment10/run.sh  $gcloud_token
+          assignment10/run.sh  $gcloud_token
